# satellite

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  aiclient.py  configure-app.sh  docker-compose.yaml  documentation.py  edge.py  hq.py  iceberger.py  main.py  mapr.py  nasa.json  old-vlm.py  page.py  pages.py  pyproject.toml  requirements.txt  reset-app.sh  services.py  settings.py  st-edge.py  st-pages.py  start.sh  streams.py  utils.py  vlm.py
.nicegui/: storage-general.json  storage-user-7d43c98a-7c0c-40a4-b8ae-0e7c6d578de2.json
