[project]
name = "satellite"
version = "0.1.0"
description = "Process satellite images using DF & AI"
readme = "README.md"
authors = [
    { name = "Erdinc Kaya", email = "erdincka@msn.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mapr-streams-python>=2.6.0",
    "nicegui>=2.18.0",
    "openai>=1.82.0",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pyiceberg[sql-sqlite]>=0.9.1",
    "sqlalchemy>=2.0.41",
    "watchdog>=6.0.0",
]
